...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Spinner
            android:id="@+id/spinners2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="end"/>
        <TextView
            android:layout_width="match_parent"
...
            android:text="@string/notfound"
            android:textColor="@color/pureBlack"
            android:id="@+id/nfs"
            android:layout_margin="20dp"
            android:visibility="gone"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:listitem="@layout/layout_item_card">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
...
