...
        style="@style/Base.Widget.Design.TabLayout"
        app:layout_collapseMode="pin"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabTextColor="@color/pureWhite" />
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pureWhite"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>
